# tulpa2

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  tulpa2.py
config/: TOKEN.example.txt  config.example.yaml
utils/: config_loader.py  logger.py  paths.py
